Fixed Guest error login link loosing URL query due to it not being encoded correctly. Fixed stray &nbsp; in _htmlentities and _htmlentities_decode Fixed _htmlentities and _htmlentities_decode having problems with slashes being left in the output due to escaped replace string where not required. Fixed [x new of y] wrapping incorrectly by adding white-space: nowrap to CSS (for default style only) Fixed "Ararar" error message in thread_options.php Removed <bdo> tag from thread_list.php

--- a/forum/styles/Default/style.css
+++ b/forum/styles/Default/style.css
@@ -377,6 +377,7 @@ a {
 .threadxnewofy {
     font-size: 8pt;
     padding-left: 0px;
+    white-space: nowrap;
 }
 
 .foldername {
